# mvl-erp-backend

./: .coveragerc  .env.test  .env.tpl  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  ASYNC_EXPORT_IMPLEMENTATION.md  BUSINESS_LOGIC_WORKING_DAY_CALCULATION.md  CHANGES_SUMMARY.md  CLAUDE.md  Dockerfile  EXCEL_EXPORT_UPDATE_NEEDED.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_UPDATES.md  KNOWN_ISSUES_REPORT_AGGREGATION.md  KPI_SALARY_UPDATES_SUMMARY.md  LEADER_KPI_ASSESSMENT_IMPLEMENTATION.md  MOBILE_API_REFERENCE.md  MOBILE_TEST_SUMMARY.md  Makefile  OPENAPI_EXAMPLES.md  OPTIMIZATION_CHECKLIST.md  PAYROLL_BUG_FIXES_SUMMARY.md  PAYROLL_CALCULATION_UPDATE_SUMMARY.md  PAYROLL_EXPORT_UPDATE.md  PR_198_REVIEW.md  README.md  README_REVIEW.md  REVIEW_SUMMARY.md  SIGNAL_VALIDATION_FIX.md  TESTING_GUIDE.md  TEST_FIX_SUMMARY.md  TEST_REORGANIZATION_SUMMARY.md  celery_tasks.py  conftest.py  manage.py  mypy.ini  (+5 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md  copilot-workspace-instructions.md
.github/workflows/: ci-cd.yml  ci.yml  deploy-staging.yml  deploy-test.yml
api/: README.md  schema_hooks.py
api/tests/: test_api_version.py  test_schema_hooks.py
apps/audit_logging/: IMPLEMENTATION.md  README.md  REFACTORING_NOTES.md  __init__.py  apps.py  batch.py  constants.py  consumer.py  decorators.py  dlq_consumer.py  exceptions.py  models.py  (+11 more)
config/: Dockerfile
docs/: ASYNC_IMPORT_ARCHITECTURE.md  ASYNC_IMPORT_USAGE.md  AUTO_CODE_GENERATION.md  AUTO_PERMISSION_REGISTRATION.md  CICD.md  CI_OPTIMIZATION_SUMMARY.md  CI_QUICK_REFERENCE.md  CI_WORKFLOW_COMPARISON.md  CODE_GENERATION_REVIEW.md  COPILOT_AGENT_OPTIMIZATION.md  COPILOT_AGENT_VALIDATION.md  EC2_DEPLOYMENT.md  EMPLOYEE_ROLE_API_DOCUMENTATION.md  EMPLOYEE_ROLE_IMPLEMENTATION_SUMMARY.md  EMPLOYEE_ROLE_TRANSLATIONS.md  EXPORT_FILTERSET_DOCUMENTATION.md  FCM_SETUP.md  FIELD_FILTERING_DEPLOYMENT.md  FIELD_FILTERING_INTEGRATION_GUIDE.md  FIELD_FILTERING_README.md  FIELD_FILTERING_SERIALIZER_EXAMPLES.py  FILE_UPLOAD_SYSTEM.md  GEOGRAPHIC_API_DOCUMENTATION.md  GITHUB_SETUP.md  HRM_API_DOCUMENTATION.md  I18N_IMPLEMENTATION_SUMMARY.md  I18N_MIGRATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPORT_FEATURE_SUMMARY.md  IMPORT_HANDLER_EXAMPLE.py  IMPORT_NEW_FEATURES.md  IMPORT_README.md  IMPORT_TEMPLATE_MANAGEMENT.md  IMPORT_XLSX.md  IMPORT_XLSX_COMPREHENSIVE.md  MAIL_TEMPLATES_IMPLEMENTATION.md  MIGRATION_GUIDE_VIEWSETS.md  NOTIFICATION_SYSTEM.md  PENALTY_MANAGEMENT_API.md  PERMISSIONS_ARCHITECTURE.md  (+26 more)
libs/: __init__.py  api_doc_constants.py  base_model_mixin.py  base_viewset.py  code_generation.py  datetimes.py  decimals.py  import_constants.py  import_mixin.py  pagination.py  request_utils.py  retry.py  serializer_mixins.py  strings.py  validators.py
scripts/: backfill_timesheet_fields.py  check_no_vietnamese.py  check_string_constants.py  correct_code_length.py  create_recruitment_demo_data.py  fix_sequences.py  generate_employee_resigned_reason_reports.py  generate_employee_status_reports.py  import_attendance_devices.py  manual_test_attendance_sync.py  push_audit_logs_from_logfile_to_opensearch.py  rebuild_staff_growth_reports.py  recalculate_all_monthly_timesheets.py  recalculate_all_timesheets.py  recalculate_timesheets.py  reorganize_tests.sh  setup-cicd-branches.sh  trigger_sales_revenue_aggregation.py
settings/: __init__.py  develop.py  local.py  prod.py  schema_sorting.py  staging.py  test.py
tests/: test_check_no_vietnamese.py
(+1398 files in other folders)
